Fixed some responsive layout issues.

--- a/app/assets/stylesheets/_custom/custom.css.scss
+++ b/app/assets/stylesheets/_custom/custom.css.scss
@@ -7,227 +7,113 @@ html {
 	color: $dark_brown;
 }
 
-aside {
-	position: fixed;
-	width: 30%;
-	padding: 1em 2em 1em 1em;
-	
-	box-sizing: border-box;
-	
+aside[role=nav] {
 	nav {
-		margin-bottom: 1em;
-
-		ul {
-			li {
-				margin: 0 0 0.4em 0;
-				font: normal normal 18px/19px $pt_sans_narrow;
-		
-				a {
-					text-decoration: none;
-				}
-			}
-		}
-	}
-	
-	nav[role=home] {
-		margin-bottom: 0.5em;
-		
-		a {
-			display: inline-block;
-			
-			font-size: 36px;
-			text-decoration: none;
+		li {
+			font: normal normal 18px/19px $pt_sans_narrow;
 		}
 	}
 	
 	nav[role=meta-dynamic] {
-		padding: 0.5em 0 0.3em 0.5em;
-		border-left: 2px solid $green;
+		border-color: $green;
 	}
-}
-
-div[role=main] {
-	margin-left: 30%;
-	width: 60%;
-
-	padding-top: 1em;
 }
 
 body > footer {
-	clear: both;
-	
-	width: 60%;
-	margin: 15px 0 15px 30%;
-	
 	p {
 		font: normal normal 12px $museo_slab;
 	}
-	
-	p.copyright {
-		text-align: center;
-	}
+}
+
+aside[role=supplemental] {
+  div[role=container] {
+    padding: 1em;
+    
+    background-color: darken($grey, 8%);
+  }
+  
+  h3 {
+    margin: 0;
+  }
 }
 
 article {
-	margin-bottom: 3em;
-	
 	header {
 		h1 {
-			margin: 0 0 0.5em 0;
-		
 			font: normal normal 36px/40px $pt_sans_narrow;
-		
-			a.permalink {
-				font-size: 16px;
-				text-decoration: none;
-			}
 		}
 	}
 	
 	p {
-		margin: 0 0 1em 0;
 		font: normal 300 17px/24px $museo_slab;
 	}
 	
 	ul {
-		margin: 0 2em 1em 2em;
-		margin-left: 2em;
-
-		padding: 0;
-		
 		li {
-			margin-left: 1em;
-			padding: 2px 0 2px 2px;
-			
 			font: normal 300 15px/20px $museo_slab;
-			list-style: none;
 		}
-		
-	    li:before {
-			display: block;
-			position: relative;
-
-			left: -1.45em;
-			top: 0;
-
-			max-width: 0px;
-			max-height: 0px;
-
-			font-family: FontAwesome;
-			font-size: 12px;
-			content: "\f054";
-			color: $green;
-	    }
 	}
 	
 	figure.quote {
-		margin: 0 2em 1em 2em;
-		padding: 0 0 0.5em 1em;
-		
-		border-left: 2px solid $green;
-		
-		blockquote {
-			margin: 0;
-			padding: 0.25em 0 0 0;
-			
-			p {
-				margin: 0.5em 0;
-				font-style: italic;
-			
-				em {
-					font-style: normal;
-				}
-			}
-		}
+		border-color: $green;
 		
 		blockquote:before {
-			display: block;
-			position: relative;
-
-			left: -0.8em;
-			top: -5px;
-
-			height: 0; 
-
-			content: "\201c"; 
-
 			font: italic 500%/1 $museo_slab;
 			color: #999;
 		}
 		
 		figcaption {
 			font: normal 300 115%/1 $museo_slab;
-			
-			text-align: right;
-		}
-		
-		figcaption:before {
-			content: "\2014"; 
 		}
 	}
 	
 	figure.image, figure.code {
-		margin: 0 2em 1em 2em;
-		padding: 0;
-		
-		img {
-			max-width: 100%;
-		}
-		
 		figcaption {
-			margin-top: 0.5em;
-			padding: 0.5em 0;
-			
-			border-top: 2px solid $green;
-			border-bottom: 2px solid $green;
+			border-color: $green;
 			
 			font: normal normal 110%/1.2 $pt_sans_narrow;
 		}
 
 		a {
-			text-decoration: none;
 			color: $dark_brown;
 		}
 	}
 	
-	figure.code {
-		pre {
-			margin: 0;
-			
-			code {
-				font-size: 75%;
-			}
-		}
-	}
-	
 	footer {
-		border-top: 2px solid $green;
-		border-bottom: 2px solid $green;
+		border-color: $green;
 		
 		time {
-			display: block;
-			
-			padding: 0.5em 0;
-			
 			font: normal 500 75%/1 $museo_slab;
-			
-			text-align: center;
 		}
-		
-		time:before, time:after {
-			display: inline-block;
-			padding: 0 7px;
-			content: "\2619";
-			font-size: 21px;
-			line-height: 7px;
-		}
-		
-		time:after {
-			-moz-transform: scaleX(-1); /* Gecko */
-	        -o-transform: scaleX(-1); /* Operah */
-	        -webkit-transform: scaleX(-1); /* webkit */
-	        transform: scaleX(-1); /* standard */
-	        filter: FlipH; /* IE 6/7/8 */
-		}
+	}
+}
+
+
+@media screen and (max-width: 600px) {
+  aside[role=nav] {
+    border-bottom: 2px solid $green;
+    
+    overflow: auto;
+    
+    nav {
+      margin-bottom: 0;
+    }
+  }
+  
+  nav[role=home] {
+    float: left;
+    width: 40px;
+  }
+  
+  nav[role=meta] {
+    padding-left: 50px;
+    
+    li {
+      display: inline;
+    }
+  }
+  
+	nav[role=meta-dynamic], nav[role=archives] {
+    display: none;
 	}
 }
