--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -3,25 +3,24 @@ html {
 	color: #000;
 }
 
-aside {
+aside[role=nav] {
 	position: fixed;
 	width: 30%;
 	padding: 1em 2em 1em 1em;
 	
+  -moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
 	nav {
 		margin-bottom: 1em;
 
-		ul {
-			li {
-				margin: 0 0 0.4em 0;
-				font: normal normal 18px/19px $public_heading_font;
-		
-				a {
-					text-decoration: none;
-				}
-			}
+		li {
+			margin: 0 0 0.4em 0;
+			font: normal normal 18px/19px $public_heading_font;
+		}
+    
+		a {
+			text-decoration: none;
 		}
 	}
 	
@@ -62,4 +61,8 @@ body > footer {
 	p.copyright {
 		text-align: center;
 	}
+}
+
+aside[role=supplemental] {
+  display: none;
 }
