--- a/app/assets/stylesheets/_responsive.css.scss
+++ b/app/assets/stylesheets/_responsive.css.scss
@@ -15,9 +15,10 @@ $break-large: 1024px;
 }
 */
 
-@media screen and (max-width: 320px) {
-	aside {
-		display: none;
+@media screen and (max-width: 600px) {
+	aside[role=nav] {
+    position: relative;
+    width: 100%;
 	}
 	
 	div[role=main], body > footer {
@@ -30,10 +31,36 @@ $break-large: 1024px;
 		ul, figure.quote {
 			margin-right: 0;
 		}
-		
-		figure.image, figure.code {
-			margin-left: 0;
-			margin-right: 0;
-		}
 	}
 }
+
+@media screen and (min-width: 1100px) {
+  aside[role=nav] {
+    width: 325px;
+  }
+  
+  div[role=main], body > footer {
+    width: 650px;
+    margin-left: 325px;
+  }
+}
+
+/*
+@media screen and (min-width: 1200px) {
+  aside[role=supplemental] {
+    display: block;
+    
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    width: 100%;
+    max-width: 1315px;
+
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    padding-left: 325px + 650px + 40px;
+  }
+}
+*/
